cpp/summaries/2020-08-15T00:48:14+10:00-summary
Loading: 
Loading: 0 packages loaded
Analyzing: target //src/pso/main:summary (0 packages loaded, 0 targets configured)
INFO: Analyzed target //src/pso/main:summary (0 packages loaded, 0 targets configured).
INFO: Found 1 target...
[0 / 6] [Prepa] BazelWorkspaceStatusAction stable-status.txt
ERROR: /home/dom/tetrisai/cpp/src/BUILD:7:1: C++ compilation of rule '//src:shared' failed (Exit 1) gcc failed: error executing command /usr/bin/gcc -U_FORTIFY_SOURCE -fstack-protector -Wall -Wunused-but-set-parameter -Wno-free-nonheap-object -fno-omit-frame-pointer '-std=c++0x' -MD -MF ... (remaining 27 argument(s) skipped)

Use --sandbox_debug to see verbose messages from the sandbox
src/shared/BranchSearcher/defs.cpp:4:7: error: redefinition of 'int BranchSearcherDefs::TOP_N_BLOCKS'
    4 |   int TOP_N_BLOCKS = 4;
      |       ^~~~~~~~~~~~
In file included from src/shared/BranchSearcher/defs.cpp:1:
./src/shared/BranchSearcher/defs.h:4:7: note: 'int BranchSearcherDefs::TOP_N_BLOCKS' previously declared here
    4 |   int TOP_N_BLOCKS;
      |       ^~~~~~~~~~~~
src/shared/BranchSearcher/defs.cpp:5:7: error: redefinition of 'int BranchSearcherDefs::INIT_TOP_N_BLOCKS'
    5 |   int INIT_TOP_N_BLOCKS = 3;
      |       ^~~~~~~~~~~~~~~~~
In file included from src/shared/BranchSearcher/defs.cpp:1:
./src/shared/BranchSearcher/defs.h:5:7: note: 'int BranchSearcherDefs::INIT_TOP_N_BLOCKS' previously declared here
    5 |   int INIT_TOP_N_BLOCKS;
      |       ^~~~~~~~~~~~~~~~~
src/shared/BranchSearcher/defs.cpp:6:7: error: redefinition of 'int BranchSearcherDefs::DEPTH'
    6 |   int DEPTH = 1;
      |       ^~~~~
In file included from src/shared/BranchSearcher/defs.cpp:1:
./src/shared/BranchSearcher/defs.h:6:7: note: 'int BranchSearcherDefs::DEPTH' previously declared here
    6 |   int DEPTH;
      |       ^~~~~
src/shared/BranchSearcher/defs.cpp:7:7: error: redefinition of 'int BranchSearcherDefs::DEPTH_WITH_KNOWN_BLOCK'
    7 |   int DEPTH_WITH_KNOWN_BLOCK = 3;
      |       ^~~~~~~~~~~~~~~~~~~~~~
In file included from src/shared/BranchSearcher/defs.cpp:1:
./src/shared/BranchSearcher/defs.h:7:7: note: 'int BranchSearcherDefs::DEPTH_WITH_KNOWN_BLOCK' previously declared here
    7 |   int DEPTH_WITH_KNOWN_BLOCK;
      |       ^~~~~~~~~~~~~~~~~~~~~~
Target //src/pso/main:summary failed to build
Use --verbose_failures to see the command lines of failed build steps.
INFO: Elapsed time: 0.303s, Critical Path: 0.23s
INFO: 0 processes.
FAILED: Build did NOT complete successfully
ERROR: Build failed. Not running target
FAILED: Build did NOT complete successfully
